Fix width on mobile

--- a/styles.css
+++ b/styles.css
@@ -15,9 +15,9 @@ html {
 
 p {
   font-size: 1rem;
-  line-height: 1.4rem;
-  letter-spacing: 0.12;
   font-variant-ligatures: common-ligatures;
+  letter-spacing: 0.12;
+  line-height: 1.4rem;
 }
 
 h2 {
@@ -39,7 +39,7 @@ h2 {
 
 body {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   font-family: "Space Grotesk", sans-serif;
   margin: 0;
@@ -56,6 +56,7 @@ body {
   flex-direction: column;
   padding: 5vh 5vw;
   height: 90vh;
+  width: 90vw;
 }
 
 .bottom-orangebar {
@@ -156,7 +157,7 @@ body {
   padding: 3px;
   position: absolute;
   bottom: -38px;
-  width: min(10vw, 80px);
+  width: min(12vw, 80px);
   height: 30px;
   animation: hamburger-icon-slide 0.5s ease-out 2s 1 normal forwards;
 }
@@ -545,7 +546,7 @@ form h2,
 .contact-section-wrapper {
   max-width: 100%;
   margin: 0 0 auto;
-  padding: 0 0;
+  padding: 0;
   display: flex;
   flex-flow: column-reverse;
   align-content: space-between;
@@ -649,6 +650,7 @@ form h2,
   .project-link p {
     display: block;
   }
+
   h2 {
     font-size: 1.777rem;
   }
